Moved Params Routes
Made the params more RESTful by moving from a get params and update params route to using a GET and a PATCH on params.
